Chore: updated swagger docs
